@@ -20,6 +20,7 @@
             Remove forced inlining in variable inspection functions (reduces flash usage by ~10k)
             Remove un-needed DNS lookup for localhost
             Add WIZnet UDP support
+            Tidying up build to avoid making un-needed bin, hex or lst files
   
      1v95 : nRF5x: Swap to UART fifo to avoid overrun errors at high baud rates
             Ensure Exceptions/errors are reported on a blank line
